<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="¿Que deseas hacer?"
        android:id="@+id/textViewRegDesc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Crear un Grupo de Hogar"
        android:id="@+id/buttonRegCreateGH"
        android:onClick="onClickCreateGH"
        android:layout_below="@+id/textViewRegDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Unirme a un Grupo de Hogar"
        android:id="@+id/buttonRegJoinGH"
        android:onClick="onClickJoinGH"
        android:layout_below="@+id/buttonRegCreateGH"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp" />
</RelativeLayout>
